--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@material/mwc-fab": "^0.20.0",
     "@material/mwc-formfield": "^0.20.0",
     "@material/mwc-icon-button": "^0.20.0",
+    "@material/mwc-linear-progress": "^0.20.0",
     "@material/mwc-list": "^0.20.0",
     "@material/mwc-menu": "^0.20.0",
     "@material/mwc-radio": "^0.20.0",
